--- a/HW2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HW2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,7 +133,8 @@ CurrentPosGridSize=0
 LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile
 
 [DetailCategories]
 PointLight.TransformCommon=True
@@ -1005,10 +1006,25 @@ PointLightComponent.LOD=False
 PointLightComponent.Collision=False
 Actor.Replication=True
 Actor.Collision=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+VRTeleportVisualizer_C.Tick=True
+VRTeleportVisualizer_C.Replication=True
+VRTeleportVisualizer_C.Rendering=True
+VRTeleportVisualizer_C.Collision=True
+VRTeleportVisualizer_C.Actor=True
+VRTeleportVisualizer_C.Input=True
+VRTeleportVisualizer_C.HLOD=True
+VRTeleportVisualizer_C.WorldPartition=True
+VRTeleportVisualizer_C.Events=True
 
 [RootWindow]
 ScreenPosition=X=216.800 Y=96.000
-WindowSize=X=1289.600 Y=729.600
+WindowSize=X=1291.200 Y=731.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1959,7 +1975,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1979,22 +1995,26 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Key
-MRUItem1=/Game/Interfaces/Grab
-MRUItem2=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem3=/Engine/EngineSky/SM_SkySphere
-MRUItem4=/Game/VRTemplate/Blueprints/Projectile
-MRUItem5=/Game/VRTemplate/Blueprints/Pistol
-MRUItem6=/Engine/VREditor/BasicMeshes/M_Floor_01
-MRUItem7=/Engine/VREditor/BasicMeshes/MI_Ball_01
-MRUItem8=/Engine/VREditor/BasicMeshes/SM_Ball_01
-MRUItem9=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
-MRUItem10=/Game/VRTemplate/Blueprints/GrabComponent
-MRUItem11=/Game/LevelPrototyping/Materials/M_PrototypeGrid
-MRUItem12=/Game/VRTemplate/Blueprints/Menu
-MRUItem13=/Game/Blueprints/Keyhole
-MRUItem14=/Game/Blueprints/Door
-MRUItem15=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem0=/Game/VRTemplate/Blueprints/VRTeleportVisualizer
+MRUItem1=/Game/StarterContent/Materials/M_Tech_Hex_Tile
+MRUItem2=/Game/Materials/MI_Transparent_Blue1
+MRUItem3=/Game/StarterContent/Materials/M_Glass
+MRUItem4=/Game/StarterContent/Materials/M_Tech_Checker_Dot
+MRUItem5=/Game/LevelPrototyping/Materials/MI_Transparent_Blue1
+MRUItem6=/Game/LevelPrototyping/Materials/M_Transparent
+MRUItem7=/Game/LevelPrototyping/Materials/M_Solid
+MRUItem8=/Game/LevelPrototyping/Materials/MI_Solid_Blue
+MRUItem9=/Game/Blueprints/Key
+MRUItem10=/Game/Interfaces/Grab
+MRUItem11=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem12=/Engine/EngineSky/SM_SkySphere
+MRUItem13=/Game/VRTemplate/Blueprints/Projectile
+MRUItem14=/Game/VRTemplate/Blueprints/Pistol
+MRUItem15=/Engine/VREditor/BasicMeshes/M_Floor_01
+MRUItem16=/Engine/VREditor/BasicMeshes/MI_Ball_01
+MRUItem17=/Engine/VREditor/BasicMeshes/SM_Ball_01
+MRUItem18=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
+MRUItem19=/Game/VRTemplate/Blueprints/GrabComponent
 
 [AssetEditorToolkitTabLocation]
 /Game/VRTemplate/Blueprints/VRPawn.VRPawn=1
@@ -2013,6 +2033,15 @@ MRUItem15=/Game/VRTemplate/Blueprints/VRPawn
 /Game/VRTemplate/Blueprints/Projectile.Projectile=0
 /Engine/EngineSky/M_Sky_Panning_Clouds2.M_Sky_Panning_Clouds2=0
 /Engine/EngineSky/SM_SkySphere.SM_SkySphere=0
+/Game/LevelPrototyping/Materials/M_Solid.M_Solid=0
+/Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=0
+/Game/LevelPrototyping/Materials/MI_Transparent_Blue1.MI_Transparent_Blue1=0
+/Game/LevelPrototyping/Materials/M_Transparent.M_Transparent=0
+/Game/StarterContent/Materials/M_Tech_Checker_Dot.M_Tech_Checker_Dot=0
+/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile=0
+/Game/Materials/MI_Transparent_Blue1.MI_Transparent_Blue1=0
+/Game/StarterContent/Materials/M_Glass.M_Glass=0
+/Game/VRTemplate/Blueprints/VRTeleportVisualizer.VRTeleportVisualizer=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2058,9 +2087,9 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Key.Key;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/LevelPrototyping/Meshes/SM_ChamferCube.SM_ChamferCube;
 RecentlyPlaced=/Game/Blueprints/Keyhole.Keyhole;
-RecentlyPlaced=/Game/Blueprints/Key.Key;
 RecentlyPlaced=/Game/Blueprints/Door.Door;
 
 [/Script/EditorStyle.EditorStyleSettings]
@@ -2225,11 +2254,12 @@ PropertyWrapper=InputSettings.Bindings.AxisMappings.SpectatorYaw,InputSettings.B
 K2Node_VariableGet=InputSettings.Bindings.AxisMappings.SpectatorYaw,InputSettings.Bindings.AxisMappings.SpectatorMoveForward,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SpectatorResetFOV,InputSettings.Bindings.ActionMappings.SpectatorFadeToggle,InputSettings.Bindings.ActionMappings.SpectatorActiveToggle,InputSettings.Bindings.ActionMappings.SpectatorResetRotation,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MovementAxisLeft_X,InputSettings.Bindings.AxisMappings.MovementAxisLeft_Y,InputSettings.Bindings.AxisMappings.SpectatorPitch,InputSettings.Bindings.AxisMappings.SpectatorFOV,InputSettings.Bindings.AxisMappings.SpectatorMoveRight,InputSettings.Bindings.AxisMappings.SpectatorMoveUp,InputSettings.Bindings.AxisMappings.MovementAxisRight_X,InputSettings.Bindings.AxisMappings.MovementAxisRight_Y,
 Grabbable_SmallCube_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings.SpectatorYaw,InputSettings.Bindings.AxisMappings.SpectatorMoveForward,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SpectatorResetFOV,InputSettings.Bindings.ActionMappings.SpectatorFadeToggle,InputSettings.Bindings.ActionMappings.SpectatorActiveToggle,InputSettings.Bindings.ActionMappings.SpectatorResetRotation,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MovementAxisLeft_X,InputSettings.Bindings.AxisMappings.MovementAxisLeft_Y,InputSettings.Bindings.AxisMappings.SpectatorPitch,InputSettings.Bindings.AxisMappings.SpectatorFOV,InputSettings.Bindings.AxisMappings.SpectatorMoveRight,InputSettings.Bindings.AxisMappings.SpectatorMoveUp,InputSettings.Bindings.AxisMappings.MovementAxisRight_X,InputSettings.Bindings.AxisMappings.MovementAxisRight_Y,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,
 Actor=InputSettings.Bindings.AxisMappings.SpectatorYaw,InputSettings.Bindings.AxisMappings.SpectatorMoveForward,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SpectatorResetFOV,InputSettings.Bindings.ActionMappings.SpectatorFadeToggle,InputSettings.Bindings.ActionMappings.SpectatorActiveToggle,InputSettings.Bindings.ActionMappings.SpectatorResetRotation,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MovementAxisLeft_X,InputSettings.Bindings.AxisMappings.MovementAxisLeft_Y,InputSettings.Bindings.AxisMappings.SpectatorPitch,InputSettings.Bindings.AxisMappings.SpectatorFOV,InputSettings.Bindings.AxisMappings.SpectatorMoveRight,InputSettings.Bindings.AxisMappings.SpectatorMoveUp,InputSettings.Bindings.AxisMappings.MovementAxisRight_X,InputSettings.Bindings.AxisMappings.MovementAxisRight_Y,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshActor.TransformCommon.Transform,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Glass,MaterialEditorInstanceConstant.ParameterGroups.Refraction,
 SkyLight=InputSettings.Bindings.AxisMappings.SpectatorYaw,InputSettings.Bindings.AxisMappings.SpectatorMoveForward,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SpectatorResetFOV,InputSettings.Bindings.ActionMappings.SpectatorFadeToggle,InputSettings.Bindings.ActionMappings.SpectatorActiveToggle,InputSettings.Bindings.ActionMappings.SpectatorResetRotation,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MovementAxisLeft_X,InputSettings.Bindings.AxisMappings.MovementAxisLeft_Y,InputSettings.Bindings.AxisMappings.SpectatorPitch,InputSettings.Bindings.AxisMappings.SpectatorFOV,InputSettings.Bindings.AxisMappings.SpectatorMoveRight,InputSettings.Bindings.AxisMappings.SpectatorMoveUp,InputSettings.Bindings.AxisMappings.MovementAxisRight_X,InputSettings.Bindings.AxisMappings.MovementAxisRight_Y,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshActor.TransformCommon.Transform,
 DirectionalLight=InputSettings.Bindings.AxisMappings.SpectatorYaw,InputSettings.Bindings.AxisMappings.SpectatorMoveForward,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SpectatorResetFOV,InputSettings.Bindings.ActionMappings.SpectatorFadeToggle,InputSettings.Bindings.ActionMappings.SpectatorActiveToggle,InputSettings.Bindings.ActionMappings.SpectatorResetRotation,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MovementAxisLeft_X,InputSettings.Bindings.AxisMappings.MovementAxisLeft_Y,InputSettings.Bindings.AxisMappings.SpectatorPitch,InputSettings.Bindings.AxisMappings.SpectatorFOV,InputSettings.Bindings.AxisMappings.SpectatorMoveRight,InputSettings.Bindings.AxisMappings.SpectatorMoveUp,InputSettings.Bindings.AxisMappings.MovementAxisRight_X,InputSettings.Bindings.AxisMappings.MovementAxisRight_Y,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshActor.TransformCommon.Transform,
 Key_C=InputSettings.Bindings.AxisMappings.SpectatorYaw,InputSettings.Bindings.AxisMappings.SpectatorMoveForward,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SpectatorResetFOV,InputSettings.Bindings.ActionMappings.SpectatorFadeToggle,InputSettings.Bindings.ActionMappings.SpectatorActiveToggle,InputSettings.Bindings.ActionMappings.SpectatorResetRotation,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MovementAxisLeft_X,InputSettings.Bindings.AxisMappings.MovementAxisLeft_Y,InputSettings.Bindings.AxisMappings.SpectatorPitch,InputSettings.Bindings.AxisMappings.SpectatorFOV,InputSettings.Bindings.AxisMappings.SpectatorMoveRight,InputSettings.Bindings.AxisMappings.SpectatorMoveUp,InputSettings.Bindings.AxisMappings.MovementAxisRight_X,InputSettings.Bindings.AxisMappings.MovementAxisRight_Y,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshActor.TransformCommon.Transform,
 PointLightComponent=InputSettings.Bindings.AxisMappings.SpectatorYaw,InputSettings.Bindings.AxisMappings.SpectatorMoveForward,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SpectatorResetFOV,InputSettings.Bindings.ActionMappings.SpectatorFadeToggle,InputSettings.Bindings.ActionMappings.SpectatorActiveToggle,InputSettings.Bindings.ActionMappings.SpectatorResetRotation,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MovementAxisLeft_X,InputSettings.Bindings.AxisMappings.MovementAxisLeft_Y,InputSettings.Bindings.AxisMappings.SpectatorPitch,InputSettings.Bindings.AxisMappings.SpectatorFOV,InputSettings.Bindings.AxisMappings.SpectatorMoveRight,InputSettings.Bindings.AxisMappings.SpectatorMoveUp,InputSettings.Bindings.AxisMappings.MovementAxisRight_X,InputSettings.Bindings.AxisMappings.MovementAxisRight_Y,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshActor.TransformCommon.Transform,
+MaterialInstanceConstant=
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2407,9 +2437,10 @@ ChangeVariableType_Warning=False
 StaticMeshActor.Lighting=False
 PointLightComponent.Rendering=False
 PointLightComponent.Light=False
+MaterialEditorInstanceConstant.General=False
+StaticMeshActor.Materials=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -2474,7 +2505,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
